remove SuppressFBWarnings DCN_NULLPOINTER_EXCEPTION and add unit test